Pushing rebuild script out to PA.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,5 @@ jobs:
       - name: Run Python tests.
         run: make all_tests
         
-      # Deploy to Heroku
-      #  - uses: akhileshns/heroku-deploy@v3.12.12
-      #    with:
-      #        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      #        heroku_app_name: "demo-repo3"
-      #        heroku_email: "ejc369@nyu.edu"
+      - name: Deploy to PythonAnywhere
+        run: ./deploy.sh
