Added env line with DEMO_PA_PWD to deploy in main.yml.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,5 @@ jobs:
         
       - name: Deploy to PythonAnywhere
         run: ./deploy.sh
+        env:
+          DEMO_PA_PWD: ${{secrets.DEMO_PA_PWD}}
